2001-09-17  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>

	* gcse.c (hash_scan_set): Fix merge glitch in last patch.

2001-09-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* listing: Remove obsolete file.

2001-09-15  Richard Henderson  <rth@redhat.com>

	* c-typeck.c (comptypes): Handle zero-length arrays properly.

2001-09-15  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi: Explain AIX exception handling work-around.
	Update URL for AIX fixes.

2001-09-15  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cpplib.c (do_pragma): Never expand macros.

2001-09-14  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (internal_label_prefix): New.
	(internal_label_prefix_len): New.
	(override_options): Set them.
	(local_symbolic_operand): New.
	(legitimate_pic_address_disp_p): Use it.
	(legitimize_pic_address): Likewise.

2001-09-14  Marc Espie <espie@openbsd.org>

	* config/i386/unix.h (ASM_OUTPUT_MI_THUNK):  Generate reference to GOT
	correctly.

2001-09-13  Markus Werle <numerical.simulation@web.de>
            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Binaries): Add "Binaries for HP-UX 11.00 at
	Aachen University of Technology".

2001-09-13  Andreas Schwab  <schwab@suse.de>

	* config/float-m68k.h: Define DECIMAL_DIG and FLT_EVAL_METHOD for
	C99.

2001-09-12  Josh Martin  <josh.martin@abq.sc.philips.com>

	* fixinc/inclhack.def(hpux11_size_t): Keep HP-UX headers from
	defining __size_t and leaving size_t undefined.
	
2001-09-12  Jakub Jelinek  <jakub@redhat.com>

	* gcse.c (gcse_main): Fix comment typo.
	(delete_null_pointer_check): Likewise.
	(hash_scan_set): Don't consider sets with REG_EQUIV MEM notes.
	* cse.c (cse_insn): Likewise.
	* function.c (fixup_var_refs_insns_with_hash): The sequence is
	toplevel.

2001-09-11  Jim Wilson  <wilson@redhat.com>

	* alias.c (clear_reg_alias_info): Only handle pseudo registers.

2001-09-10  Tim Freeman <tim@fungibole.com>

	* dwarf2out.c (incomplete_types, decl_scope_table): Make them